tx/src/snapshots/blokli_tx__filter__tests__any_target_selector_passes_on_an_unknown_contract.snap
---
source: tx/src/filter.rs
expression: result
---
FilteredTransaction {
    sender: 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266,
    calls: [
        AuthorizedCall {
            to: 0x3333333333333333333333333333333333333333,
            selector: Some(
                [
                    27,
                    44,
                    61,
                    78,
                ],
            ),
        },
    ],
    via_module: false,
}
