tx/src/snapshots/blokli_tx__filter__tests__direct_allowed_call_passes.snap
---
source: tx/src/filter.rs
assertion_line: 472
expression: result
---
FilteredTransaction {
    sender: 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266,
    calls: [
        AuthorizedCall {
            to: 0x1111111111111111111111111111111111111111,
            selector: [
                169,
                5,
                156,
                187,
            ],
        },
    ],
    via_module: false,
}
