tx/src/snapshots/blokli_tx__filter__tests__legacy_allowed_call_passes.snap
---
source: tx/src/filter.rs
expression: result
---
FilteredTransaction {
    sender: 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266,
    calls: [
        AuthorizedCall {
            to: 0x1111111111111111111111111111111111111111,
            selector: Some(
                [
                    169,
                    5,
                    156,
                    187,
                ],
            ),
        },
    ],
    via_module: false,
}
