tx/src/snapshots/blokli_tx__filter__tests__legacy_authorized_passes.snap
---
source: tx/src/filter.rs
expression: result
---
FilteredTransaction {
    sender: 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266,
    to: 0x1111111111111111111111111111111111111111,
    selector: [
        169,
        5,
        156,
        187,
    ],
}
