tx/src/snapshots/blokli_tx__filter__tests__multi_send_batch_passes_when_every_entry_is_allowed.snap
---
source: tx/src/filter.rs
expression: result
---
FilteredTransaction {
    sender: 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266,
    calls: [
        AuthorizedCall {
            to: 0x1111111111111111111111111111111111111111,
            selector: Some(
                [
                    9,
                    94,
                    167,
                    179,
                ],
            ),
        },
        AuthorizedCall {
            to: 0x1111111111111111111111111111111111111111,
            selector: Some(
                [
                    169,
                    5,
                    156,
                    187,
                ],
            ),
        },
    ],
    via_module: true,
}
